--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </article>        
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara/gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por Myrela Caroline durante o curso do <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
